--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,4 @@
 .page {
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;;
+    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+    background-color: #2A2C2F;
 }
