--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,14 @@
 .header {
-    margin: 28px 48px 56px;
     display: flex;
     justify-content: space-between;
     align-content: flex-end;
     max-width: 1184px;
+}
+
+@media (min-width : 1280px) {
+    .header {
+        margin: 28px 48px 56px;
+    }
 }
 
 @media (min-width : 1024px) {
