--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,10 @@
     height: 52px;
     object-fit: contain;
 }
+
+@media (max-width : 767px) {
+	.header__logo {
+        width: 142px;
+        height: 42px;
+    }
+}
