--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,3 +7,10 @@
     color: #FFFFFF;
     margin: 32px 0 64px;
 }
+
+@media (max-width : 320px) {
+	.lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
