--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,10 @@
     color: #FFFFFF;
     margin: 0; 
 }
+
+@media (max-width : 320px) {
+	.lead__title {      
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
