--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,9 +8,16 @@
     margin: 32px 0 64px;
 }
 
+@media (max-width : 1279px) {
+	.lead__subtitle {
+        margin: 32px 0 56px;
+    }
+}
+
 @media (max-width : 767px) {
 	.lead__subtitle {
         font-size: 16px;
         line-height: 20px;
+        margin: 16px 0 40px;
     }
 }
