--- a/pages/index.css
+++ b/pages/index.css
@@ -14,3 +14,11 @@
 @import url(../blocks/lead/__image-container/lead__image-container.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__list-item-text/intro__list-item-text.css);
+@import url(../blocks/intro/__list-item-text/intro__list-item-text_bold.css);
