--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,10 @@
     color: #FFFFFF;
     margin: 0;
 }
+
+@media (max-width : 767px) {
+    .intro__title {  
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
