--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,3 +8,15 @@
     color: #FFFFFF;
     margin: 8px 0 0;
 }
+
+@media (max-width : 1023px) {
+    .lead__caption {
+        margin: 8px 0 0 24px;
+    }
+}
+
+@media (max-width : 767px) {
+    .lead__caption {
+        margin: 8px 0 0 16px;
+    }
+}
