--- a/pages/index.css
+++ b/pages/index.css
@@ -22,3 +22,6 @@
 @import url(../blocks/intro/__list-item/intro__list-item.css);
 @import url(../blocks/intro/__list-item-text/intro__list-item-text.css);
 @import url(../blocks/intro/__list-item-text/intro__list-item-text_bold.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
