Перешла на max-width

--- a/blocks/page/page__content/page__content.css
+++ b/blocks/page/page__content/page__content.css
@@ -1,11 +1,6 @@
 .page__content {
     width: 100%;
+    max-width: 1280px;
     display: flex;
     flex-direction: column;
-}
-
-@media (min-width : 1280px) {
-    .page__content {
-        width: 1280px;
-    }
 }
