--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -2,5 +2,5 @@
     display: grid;
     align-items: end;
     grid-template-columns: min-content min-content;
-    gap: 18px;
+    grid-gap: 18px;
 }
