--- a/pages/index.css
+++ b/pages/index.css
@@ -25,3 +25,5 @@
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+@import url(../blocks/places/places.css);
