--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,25 @@
 .places {
     display: grid;
-    grid-gap: 73px;
+    grid-gap: 80px;
     margin: 0 148px 92px;
+}
+
+@media (max-width : 1279px) {
+    .places {
+        margin: 0 48px 92px;
+    }
+}
+
+@media (max-width : 1023px) {
+    .places {
+        grid-gap: 72px;
+        margin: 0 24px 90px;
+    }
+}
+
+@media (max-width : 1023px) {
+    .places {
+        grid-gap: 50px;
+        margin: 0 0 64px;
+    }
 }
