--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,14 +3,29 @@
     grid-template-areas:
         "title website"
         "image description";
+    grid-column-gap: 40px;
+    grid-row-gap: 48px;
+}
+
+@media (max-width : 1279px) {
+    .place {
+        grid-column-gap: 32px;
+    }    
+}
+
+@media (max-width : 1023px) {
+    .place {
+        grid-column-gap: 28px;
+    }    
 }
 
 @media (max-width : 767px) {
     .place {
         grid-template-areas:
-        "title"
-        "website"
-        "image"
-        "description";
+            "title"
+            "website"
+            "image"
+            "description";
+        grid-row-gap: 32px;
     }
 }
