--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,17 +5,20 @@
         "image description";
     grid-column-gap: 40px;
     grid-row-gap: 48px;
+    grid-template-columns: minmax(min-content, 460px) 50%;
 }
 
 @media (max-width : 1279px) {
     .place {
         grid-column-gap: 32px;
+        grid-template-columns: minmax(min-content, 440px) 50%;
     }    
 }
 
 @media (max-width : 1023px) {
     .place {
         grid-column-gap: 28px;
+        grid-template-columns: minmax(min-content, 340px) 50%;
     }    
 }
 
@@ -27,5 +30,7 @@
             "image"
             "description";
         grid-row-gap: 32px;
+        grid-template-columns: minmax(min-content, max-content);
+        grid-template-rows: max-content;
     }
 }
