Отступы от края для всего, кроме фото на мобилке

--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,3 +5,10 @@
     justify-content: flex-end;
     align-items: left;
 }
+
+@media (max-width : 767px) {
+    .place__website {
+        margin: 0 16px;
+    }
+    
+}
