--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -5,7 +5,7 @@
     line-height: 20px;
     letter-spacing: 0.2em;
     color: #AAAAAA;
-    margin: 0;
+    margin: 0 0 12px;
 }
 
 @media (max-width: 1023px) {
