--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,20 +5,20 @@
         "image description";
     grid-column-gap: 40px;
     grid-row-gap: 48px;
-    grid-template-columns: minmax(min-content, 460px) 50%;
+    grid-template-columns: minmax(min-content, 460px) 1fr;
 }
 
 @media (max-width : 1279px) {
     .place {
         grid-column-gap: 32px;
-        grid-template-columns: minmax(min-content, 440px) 50%;
+        grid-template-columns: minmax(min-content, 440px) 1fr;
     }    
 }
 
 @media (max-width : 1023px) {
     .place {
         grid-column-gap: 28px;
-        grid-template-columns: minmax(min-content, 340px) 50%;
+        grid-template-columns: minmax(min-content, 340px) 1fr;
     }    
 }
 
