Убрала лишний отступ между абзацами

--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,14 +1,7 @@
 .place__description {
     grid-area: description;
-    display: grid;
-    grid-row: min-content auto;
-    grid-gap: 26px;
-}
-
-@media (max-width : 1023px) {
-    .place__description {
-        grid-gap: 25px;
-    }
+    display: flex;
+    flex-direction: column;        
 }
 
 @media (max-width : 767px) {
