--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,8 @@
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__description/place__description.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
+
+@import url(../blocks/baikal/baikal.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
