--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,4 +1,4 @@
-.footer__autor {
+.footer__author {
     margin: 0;
     font-style: normal;
     font-weight: normal;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width : 767px) {
-    .footer__autor {
+    .footer__author {
         line-height: 14px;
         margin-top: 48px;
     }    
