--- a/blocks/intro/__list-item-text/intro__list-item-text.css
+++ b/blocks/intro/__list-item-text/intro__list-item-text.css
@@ -2,6 +2,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 1.5;
     color: #FFFFFF;
 }
