--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
-    line-height: 100px;
+    line-height: 1.04;
     text-align: center;
     color: #FFFFFF;
     margin: 0; 
@@ -11,6 +11,6 @@
 @media (max-width : 767px) {
 	.lead__title {      
         font-size: 40px;
-        line-height: 44px;
+        line-height: 1.1;
     }
 }
