--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     text-decoration-line: underline;
     color: #FFFFFF;
     transition: opacity 1s linear 0;
