--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 29px;
+    line-height: 1.63;
     color: #FFFFFF;
 }
 
