--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,8 +2,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
-    text-align: center;
+    line-height: 1.22;
     color: #FFFFFF;
     text-align: center;
     max-width: 360px;
@@ -14,7 +13,7 @@
 @media (max-width : 767px) {
     .cover__subtitle {
         font-size: 14px;
-        line-height: 16px;
+        line-height: 1.14;
         max-width: 288px;
     }
 }
