--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,14 +3,14 @@
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 18px;
+    line-height: 1.12;
     color: #FFFFFF;
 }
 
 @media (max-width : 767px) {
     .footer__link {
         font-size: 24px;
-        line-height: 24px;
+        line-height: 1;
     }
     
 }
