--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.17;
     text-align: right;
     text-decoration: none;
     color: #FFFFFF;
@@ -15,6 +15,6 @@
 @media (max-width : 767px) {
     .header__lang-link {
         font-size: 18px;
-        line-height: 20px;
+        line-height: 1.11;
     }
 }
