--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,6 +3,6 @@
     font-weight: normal;
     font-size: 16px;
     color: #FFFFFF;
-    line-height: 26px;
+    line-height: 1.63;
     margin: 40px 0 33px;
 }
