--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
-    line-height: 58px;
+    line-height: 1.07;
     color: #FFFFFF;
     margin: 0;
 }
@@ -10,6 +10,6 @@
 @media (max-width : 767px) {
     .intro__title {  
         font-size: 32px;
-        line-height: 35px;
+        line-height: 1.09;
     }
 }
