--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
-    line-height: 14px;
+    line-height: 1.4;
     letter-spacing: 0.15em;
     text-transform: uppercase;
     color: #FFFFFF;
