--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 76px;
+    line-height: 1.06;
     color: #FFFFFF;
     margin: 0;
 }
@@ -11,14 +11,14 @@
 @media (max-width : 1023px) {
     .place__title{
         font-size: 42px;
-        line-height: 46px;
+        line-height: 1.06;
     }
 }
 
 @media (max-width : 767px) {
     .place__title{
         font-size: 32px;
-        line-height: 35px;
+        line-height: 1.09;
         margin: 0 16px;
     }
 }
