--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,7 @@
 .page {
     font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     background-color: #2A2C2F;
     display: flex;
     justify-content: center;
