--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,8 @@
     line-height: 1.04;
     text-align: center;
     color: #FFFFFF;
-    margin: 0; 
+    margin: 0;
+    max-width: 720px;
 }
 
 @media (max-width : 767px) {
