--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: #2A2C2F;
     z-index: 0;
     opacity: 0.3;
     transition: opacity 1s linear 0;
