--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -7,7 +7,7 @@
     background-color: #2A2C2F;
     z-index: 0;
     opacity: 0.3;
-    transition: opacity 1s linear 0;
+    transition: opacity .5s linear;
 }
 
 .cover__overlay:hover {
