--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,7 +2,7 @@
     margin: 0 0 92px 148px;
     display: flex;
     flex-direction: column;
-    width: 690px;
+    max-width: 690px;
 }
 
 @media (max-width: 1279px) {
@@ -14,13 +14,13 @@
 @media (max-width: 1023px) {
     .intro {
         margin: 0 24px 88px;
-        width: calc(100% - 48px);    
+        max-width: calc(100% - 48px);    
     }
 }
 
 @media (max-width: 767px) {
     .intro {
         margin: 0 16px 64px 16px;
-        width: calc(100% - 32px);    
+        max-width: calc(100% - 32px);    
     }
 }
