--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,7 +5,7 @@
     line-height: 1.22;
     text-decoration-line: underline;
     color: #FFFFFF;
-    transition: opacity 1s linear 0;
+    transition: opacity .5s linear;
 }
 
 .place__link:hover {
