--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: left;
+    align-items: flex-start;
 }
 
 @media (max-width: 767px) {
