Сгруппировала ссылки в шапке и исправила им текст

--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -3,4 +3,6 @@
     align-items: end;
     grid-template-columns: min-content min-content;
     grid-gap: 18px;
+    list-style: none;
+    padding: 0;
 }
