--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,3 +1,8 @@
 .intro__list-item {
     margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #FFFFFF;
 }
